Changement mineur de CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /* Colorpalette : https://colourco.de/monochrome-dark/5/040913 */
 @import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import url(fonts.css);
 
 @-moz-keyframes spinner {
 	0% {
@@ -2053,7 +2053,6 @@ input, select, textarea {
 
 		article {
 			display: flex;
-			margin-top: 2em;
 			flex-direction: column;
 		}
 
